# NukeOIDNDenoise

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindNuke.cmake  FindOpenImageDenoise.cmake
scripts/: menu.py
src/: CMakeLists.txt  oidnDenoise.cpp  oidnDenoise.hpp
